Fix PyObject_Repr and PyObject_Str reference leaks

Fix all calls to PyObject_Repr() and PyObject_Str() to be properly DECREF'd.

https://bugzilla.gnome.org/show_bug.cgi?id=675857

Signed-off-by: Martin Pitt <martinpitt@gnome.org>